--- a/04_react_core_concept_part(2)/src/index.css
+++ b/04_react_core_concept_part(2)/src/index.css
@@ -11,6 +11,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 a {
