38-5 Conditional CSS and Toggle state based on click

--- a/05_simple_react_rest_countries/src/components/Country/Country.css
+++ b/05_simple_react_rest_countries/src/components/Country/Country.css
@@ -12,6 +12,19 @@
   }
 }
 
+.if_visited {
+  background: #333;
+}
+
+.btn_visited {
+  background: #2dba4e;
+  color: white;
+
+  &:hover {
+    background: #2dba4e;
+  }
+}
+
 .flag_img {
   width: 200px;
   height: auto;
